tests/nightly/errors.stderr
error: just an expression error
 --> $DIR/errors.rs:5:16
  |
5 |         error: just an expression error,
  |                ^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: I can help with that
 --> $DIR/errors.rs:6:15
  |
6 |         help: I can help with that,
  |               ^^^^^^^^^^^^^^^^^^^^

error: this is an item error message
  --> $DIR/errors.rs:11:12
   |
11 |     error: this is an item error message,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: this is an error message
  --> $DIR/errors.rs:15:12
   |
15 |     error: this is an error message,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: but it has a note

error: hello
  --> $DIR/errors.rs:20:12
   |
20 |     error: hello,
   |            ^^^^^
   |
warning: just wanted to warn you
  --> $DIR/errors.rs:21:14
   |
21 |     warning: just wanted to warn you,
   |              ^^^^^^^^^^^^^^^^^^^^^^^
note: just jotting things down
  --> $DIR/errors.rs:22:11
   |
22 |     note: just jotting things down,
   |           ^^^^^^^^^^^^^^^^^^^^^^^^
   = help: please help on that note
   = note: notes on notes

warning: hello not found
  --> $DIR/errors.rs:28:14
   |
28 |     warning: hello not found,
   |              ^^^^^^^^^^^^^^^
   |
   = note: just a note to say hi
   = help: its a good idea to say hello

error: unknown diagnostic kind
  --> $DIR/errors.rs:34:5
   |
34 |     hello: hello,
   |     ^^^^^
   |
   = help: expected one of: 'error', 'warning', 'note', 'help'
   = note: or their _ versions

help: this is standalone help
  --> $DIR/errors.rs:38:11
   |
38 |     help: this is standalone help,
   |           ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: but we add things to it
   = help: like more help
